did title and buttons

--- a/index.html
+++ b/index.html
@@ -7,6 +7,24 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <main>
+        <div class="title">
+            Our Menu
+        </div>
+        <div class="line"></div>
+        <div class="buttons">
+            <button class="btn">All</button>
+            <button class="btn">Breakfast</button>
+            <button class="btn">Lunch</button>
+            <button class="btn">Shakes</button>
+            <button class="btn">Dinner</button>
+        </div>
+        <div class="items">
+            <div class="meal">
+                
+            </div>
+        </div>
+    </main>
     <script src="script.js"></script>
 </body>
 </html>
