made the menu items display

--- a/index.html
+++ b/index.html
@@ -20,8 +20,165 @@
             <button class="btn">Dinner</button>
         </div>
         <div class="items">
+            
             <div class="meal">
-                
+                <div class="image">
+                </div>
+                <div class="info">
+                    <div class="name">
+                        <span>Desert1</span>
+                        <span class="price">$ 15.78</span>
+                    </div>
+                    <div class="details">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam optio impedit quo, eaque sequi soluta
+                        distinctio quas. Exercitationem consequatur inventore officiis maxime, quae optio? Sequi vero ratione
+                        suscipit harum aut.
+                    </div>
+                </div>
+            </div>
+
+            <div class="meal">
+                <div class="image">
+                </div>
+                <div class="info">
+                    <div class="name">
+                        <span>Lunch1</span>
+                        <span class="price">$ 15.78</span>
+                    </div>
+                    <div class="details">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam optio impedit quo, eaque sequi soluta
+                        distinctio quas. Exercitationem consequatur inventore officiis maxime, quae optio? Sequi vero ratione
+                        suscipit harum aut.
+                    </div>
+                </div>
+            </div>
+
+            <div class="meal">
+                <div class="image">
+                </div>
+                <div class="info">
+                    <div class="name">
+                        <span>Desert2</span>
+                        <span class="price">$ 15.78</span>
+                    </div>
+                    <div class="details">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam optio impedit quo, eaque sequi soluta
+                        distinctio quas. Exercitationem consequatur inventore officiis maxime, quae optio? Sequi vero ratione
+                        suscipit harum aut.
+                    </div>
+                </div>
+            </div>
+
+            <div class="meal">
+                <div class="image">
+                </div>
+                <div class="info">
+                    <div class="name">
+                        <span>Breakfast1</span>
+                        <span class="price">$ 15.78</span>
+                    </div>
+                    <div class="details">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam optio impedit quo, eaque sequi soluta
+                        distinctio quas. Exercitationem consequatur inventore officiis maxime, quae optio? Sequi vero ratione
+                        suscipit harum aut.
+                    </div>
+                </div>
+            </div>
+
+            <div class="meal">
+                <div class="image">
+                </div>
+                <div class="info">
+                    <div class="name">
+                        <span>Lunch2</span>
+                        <span class="price">$ 15.78</span>
+                    </div>
+                    <div class="details">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam optio impedit quo, eaque sequi soluta
+                        distinctio quas. Exercitationem consequatur inventore officiis maxime, quae optio? Sequi vero ratione
+                        suscipit harum aut.
+                    </div>
+                </div>
+            </div>
+
+            <div class="meal">
+                <div class="image">
+                </div>
+                <div class="info">
+                    <div class="name">
+                        <span>Shake1</span>
+                        <span class="price">$ 15.78</span>
+                    </div>
+                    <div class="details">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam optio impedit quo, eaque sequi soluta
+                        distinctio quas. Exercitationem consequatur inventore officiis maxime, quae optio? Sequi vero ratione
+                        suscipit harum aut.
+                    </div>
+                </div>
+            </div>
+
+            <div class="meal">
+                <div class="image">
+                </div>
+                <div class="info">
+                    <div class="name">
+                        <span>Breakfast2</span>
+                        <span class="price">$ 15.78</span>
+                    </div>
+                    <div class="details">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam optio impedit quo, eaque sequi soluta
+                        distinctio quas. Exercitationem consequatur inventore officiis maxime, quae optio? Sequi vero ratione
+                        suscipit harum aut.
+                    </div>
+                </div>
+            </div>
+
+            <div class="meal">
+                <div class="image">
+                </div>
+                <div class="info">
+                    <div class="name">
+                        <span>Lunch3</span>
+                        <span class="price">$ 15.78</span>
+                    </div>
+                    <div class="details">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam optio impedit quo, eaque sequi soluta
+                        distinctio quas. Exercitationem consequatur inventore officiis maxime, quae optio? Sequi vero ratione
+                        suscipit harum aut.
+                    </div>
+                </div>
+            </div>
+
+            <div class="meal">
+                <div class="image">
+                </div>
+                <div class="info">
+                    <div class="name">
+                        <span>Shake2</span>
+                        <span class="price">$ 15.78</span>
+                    </div>
+                    <div class="details">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam optio impedit quo, eaque sequi soluta
+                        distinctio quas. Exercitationem consequatur inventore officiis maxime, quae optio? Sequi vero ratione
+                        suscipit harum aut.
+                    </div>
+                </div>
+            </div>
+
+            <div class="meal">
+                <div class="image">
+                </div>
+                <div class="info">
+                    <div class="name">
+                        <span>Dinner</span>
+                        <span class="price">$ 15.78</span>
+                    </div>
+                    <div class="details">
+                        Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam optio impedit quo, eaque sequi soluta
+                        distinctio quas. Exercitationem consequatur inventore officiis maxime, quae optio? Sequi vero ratione
+                        suscipit harum aut.
+                    </div>
+                </div>
             </div>
         </div>
     </main>
