finished javascript part

--- a/index.html
+++ b/index.html
@@ -13,20 +13,20 @@
         </div>
         <div class="line"></div>
         <div class="buttons">
-            <button class="btn">All</button>
-            <button class="btn">Breakfast</button>
-            <button class="btn">Lunch</button>
-            <button class="btn">Shakes</button>
-            <button class="btn">Dinner</button>
+            <button class="btn" id="all">All</button>
+            <button class="btn" id="allbreakfast">Breakfast</button>
+            <button class="btn" id="alllunch">Lunch</button>
+            <button class="btn" id="allshakes">Shakes</button>
+            <button class="btn" id="alldinner">Dinner</button>
         </div>
         <div class="items">
             
-            <div class="meal">
+            <div class="meal" id="breakfast3">
                 <div class="image">
                 </div>
                 <div class="info">
                     <div class="name">
-                        <span>Desert1</span>
+                        <span>Breakfast3</span>
                         <span class="price">$ 15.78</span>
                     </div>
                     <div class="details">
@@ -37,7 +37,7 @@
                 </div>
             </div>
 
-            <div class="meal">
+            <div class="meal" id="lunch1">
                 <div class="image">
                 </div>
                 <div class="info">
@@ -53,12 +53,12 @@
                 </div>
             </div>
 
-            <div class="meal">
+            <div class="meal" id="shake3">
                 <div class="image">
                 </div>
                 <div class="info">
                     <div class="name">
-                        <span>Desert2</span>
+                        <span>shake3</span>
                         <span class="price">$ 15.78</span>
                     </div>
                     <div class="details">
@@ -69,7 +69,7 @@
                 </div>
             </div>
 
-            <div class="meal">
+            <div class="meal" id="breakfast1">
                 <div class="image">
                 </div>
                 <div class="info">
@@ -85,7 +85,7 @@
                 </div>
             </div>
 
-            <div class="meal">
+            <div class="meal" id="lunch2">
                 <div class="image">
                 </div>
                 <div class="info">
@@ -101,7 +101,7 @@
                 </div>
             </div>
 
-            <div class="meal">
+            <div class="meal" id="shake1">
                 <div class="image">
                 </div>
                 <div class="info">
@@ -117,7 +117,7 @@
                 </div>
             </div>
 
-            <div class="meal">
+            <div class="meal" id="breakfast2">
                 <div class="image">
                 </div>
                 <div class="info">
@@ -133,7 +133,7 @@
                 </div>
             </div>
 
-            <div class="meal">
+            <div class="meal" id="lunch3">
                 <div class="image">
                 </div>
                 <div class="info">
@@ -149,7 +149,7 @@
                 </div>
             </div>
 
-            <div class="meal">
+            <div class="meal" id="shake2">
                 <div class="image">
                 </div>
                 <div class="info">
@@ -165,7 +165,7 @@
                 </div>
             </div>
 
-            <div class="meal">
+            <div class="meal" id="dinner">
                 <div class="image">
                 </div>
                 <div class="info">
