more efficent javascript

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </div>
         <div class="items">
             
-            <div class="meal" id="breakfast3">
+            <div class="meal breakfast" visibility="true">
                 <div class="image">
                 </div>
                 <div class="info">
@@ -37,7 +37,7 @@
                 </div>
             </div>
 
-            <div class="meal" id="lunch1">
+            <div class="meal lunch" visibility="true">
                 <div class="image">
                 </div>
                 <div class="info">
@@ -53,7 +53,7 @@
                 </div>
             </div>
 
-            <div class="meal" id="shake3">
+            <div class="meal shake" visibility="true">
                 <div class="image">
                 </div>
                 <div class="info">
@@ -69,7 +69,7 @@
                 </div>
             </div>
 
-            <div class="meal" id="breakfast1">
+            <div class="meal breakfast" visibility="true">
                 <div class="image">
                 </div>
                 <div class="info">
@@ -85,7 +85,7 @@
                 </div>
             </div>
 
-            <div class="meal" id="lunch2">
+            <div class="meal lunch" visibility="true">
                 <div class="image">
                 </div>
                 <div class="info">
@@ -101,7 +101,7 @@
                 </div>
             </div>
 
-            <div class="meal" id="shake1">
+            <div class="meal shake" visibility="true">
                 <div class="image">
                 </div>
                 <div class="info">
@@ -117,7 +117,7 @@
                 </div>
             </div>
 
-            <div class="meal" id="breakfast2">
+            <div class="meal breakfast" visibility="true">
                 <div class="image">
                 </div>
                 <div class="info">
@@ -133,7 +133,7 @@
                 </div>
             </div>
 
-            <div class="meal" id="lunch3">
+            <div class="meal lunch" visibility="true">
                 <div class="image">
                 </div>
                 <div class="info">
@@ -149,7 +149,7 @@
                 </div>
             </div>
 
-            <div class="meal" id="shake2">
+            <div class="meal shake" visibility="true">
                 <div class="image">
                 </div>
                 <div class="info">
@@ -165,7 +165,7 @@
                 </div>
             </div>
 
-            <div class="meal" id="dinner">
+            <div class="meal dinner" visibility="true">
                 <div class="image">
                 </div>
                 <div class="info">
