--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
             
             <div class="meal breakfast" visibility="true">
                 <div class="image">
+                    <img src="./images/item-1.jpeg">
                 </div>
                 <div class="info">
                     <div class="name">
@@ -39,6 +40,7 @@
 
             <div class="meal lunch" visibility="true">
                 <div class="image">
+                    <img src="images/item-2.jpeg">
                 </div>
                 <div class="info">
                     <div class="name">
@@ -55,6 +57,7 @@
 
             <div class="meal shake" visibility="true">
                 <div class="image">
+                    <img src="images/item-3.jpeg">
                 </div>
                 <div class="info">
                     <div class="name">
@@ -71,6 +74,7 @@
 
             <div class="meal breakfast" visibility="true">
                 <div class="image">
+                    <img src="images/item-4.jpeg">
                 </div>
                 <div class="info">
                     <div class="name">
@@ -87,6 +91,7 @@
 
             <div class="meal lunch" visibility="true">
                 <div class="image">
+                    <img src="images/item-5.jpeg">
                 </div>
                 <div class="info">
                     <div class="name">
@@ -103,6 +108,7 @@
 
             <div class="meal shake" visibility="true">
                 <div class="image">
+                    <img src="images/item-6.jpeg">
                 </div>
                 <div class="info">
                     <div class="name">
@@ -119,6 +125,7 @@
 
             <div class="meal breakfast" visibility="true">
                 <div class="image">
+                    <img src="images/item-7.jpeg">
                 </div>
                 <div class="info">
                     <div class="name">
@@ -135,6 +142,7 @@
 
             <div class="meal lunch" visibility="true">
                 <div class="image">
+                    <img src="images/item-8.jpeg">
                 </div>
                 <div class="info">
                     <div class="name">
@@ -151,6 +159,7 @@
 
             <div class="meal shake" visibility="true">
                 <div class="image">
+                    <img src="images/item-9.jpeg">
                 </div>
                 <div class="info">
                     <div class="name">
@@ -167,6 +176,7 @@
 
             <div class="meal dinner" visibility="true">
                 <div class="image">
+                    <img src="images/item-10.jpeg">
                 </div>
                 <div class="info">
                     <div class="name">
